syntax = "proto3";

option java_multiple_files = true;
//option java_outer_classname = "HelloWorldProto";
//option java_package = "io.grpc.examples.helloworld";
option objc_class_prefix = "ISV";

package itemservices;

// the itemServices service definition
service ItemServices {

    //Add item to wishList
    rpc addItem (Item) returns (Reply) {}

    //Lists all items given the user name
    rpc listItems (User) returns (stream Reply) {}

    //Remove item from the list given user and item.
    rpc removeItem(Item) returns (Reply) {}
}

/*message Item {
    string itemName = 1;
}*/
message User {
    string user = 1;
}

message Item {
    string user = 1;
    string item = 2;
}

message Reply {
    string message = 1;
}







